--- a/.gitattributes
+++ b/.gitattributes
@@ -2,13 +2,20 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
 
 # Ignore all test and documentation with "export-ignore".
-/.github            export-ignore
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/phpunit.xml.dist   export-ignore
-/tests              export-ignore
-/.editorconfig      export-ignore
-/.php_cs.dist       export-ignore
-/psalm.xml          export-ignore
-/psalm.xml.dist     export-ignore
-/testbench.yaml     export-ignore
+/.github                  export-ignore
+/tests                    export-ignore
+/.editorconfig            export-ignore
+/.gitattributes           export-ignore
+/.gitignore               export-ignore
+/.php-cs-fixer.dist.php   export-ignore
+/phpstan-baseline.neon    export-ignore
+/phpstan.neon.dist        export-ignore
+/phpunit.xml.dist         export-ignore
+
+* text=auto
+
+*.blade.php diff=html
+*.css diff=css
+*.html diff=html
+*.md diff=markdown
+*.php diff=php
