--- a/composer.json
+++ b/composer.json
@@ -1,24 +1,27 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "sebdesign/blade-sql",
+    "description": "Display formatted SQL queries in your Laravel views",
     "keywords": [
-        ":vendor_name",
         "laravel",
-        ":package_slug"
+        "blade",
+        "query",
+        "sql"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/sebdesign/blade-sql",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Sébastien Nikolaou",
+            "email": "info@sebdesign.eu",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.0",
-        "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^8.37"
+        "doctrine/sql-formatter": "^1.1",
+        "illuminate/contracts": "^8.65",
+        "illuminate/view": "^8.65",
+        "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
         "nunomaduro/collision": "^5.10",
@@ -26,21 +29,20 @@
         "orchestra/testbench": "^6.22",
         "pestphp/pest": "^1.10",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "phpstan/extension-installer": "^1.1",
+        "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.4",
-        "spatie/laravel-ray": "^1.26"
+        "phpstan/phpstan-strict-rules": "^1.0",
+        "phpunit/phpunit": "^9.4"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Sebdesign\\BladeSql\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Sebdesign\\BladeSql\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -54,11 +56,8 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
-            ],
-            "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
-            }
+                "Sebdesign\\BladeSql\\BladeSqlServiceProvider"
+            ]
         }
     },
     "minimum-stability": "dev",
