--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
     "require": {
         "php": "^8.0",
         "doctrine/sql-formatter": "^1.1",
-        "illuminate/contracts": "^8.65",
-        "illuminate/view": "^8.65",
+        "illuminate/contracts": "^8.65|^9.0",
+        "illuminate/view": "^8.65|^9.0",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^5.10|^6.0",
         "nunomaduro/larastan": "^1.0",
-        "orchestra/testbench": "^6.22",
+        "orchestra/testbench": "^6.22|^7.0",
         "pestphp/pest": "^1.10",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.0",
