--- a/composer.json
+++ b/composer.json
@@ -19,21 +19,21 @@
     "require": {
         "php": "^8.0",
         "doctrine/sql-formatter": "^1.1",
-        "illuminate/contracts": "^8.65|^9.0",
-        "illuminate/view": "^8.65|^9.0",
+        "illuminate/contracts": "^9.0",
+        "illuminate/view": "^9.0",
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
-        "nunomaduro/collision": "^5.10|^6.0",
-        "nunomaduro/larastan": "^1.0",
-        "orchestra/testbench": "^6.22|^7.0",
-        "pestphp/pest": "^1.10",
+        "nunomaduro/collision": "^6.0",
+        "nunomaduro/larastan": "^2.0",
+        "orchestra/testbench": "^7.0",
+        "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
         "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
         "phpstan/phpstan-strict-rules": "^1.0",
-        "phpunit/phpunit": "^9.4"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
@@ -51,7 +51,11 @@
         "test-coverage": "vendor/bin/pest coverage"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true,
+            "phpstan/extension-installer": true
+        }
     },
     "extra": {
         "laravel": {
