--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -18,9 +18,9 @@ jobs:
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 10.*
-            testbench: ^8.0
+            testbench: 8.*
           - laravel: 9.*
-            testbench: ^7.0
+            testbench: 7.*
         exclude:
           - laravel: 10.*
             php: 8.0
