--- a/composer.json
+++ b/composer.json
@@ -24,11 +24,11 @@
         "spatie/laravel-package-tools": "^1.9.2"
     },
     "require-dev": {
-        "nunomaduro/collision": "^6.0",
-        "nunomaduro/larastan": "^2.0",
-        "orchestra/testbench": "^7.0 | ^8.0",
-        "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-laravel": "^1.1",
+        "larastan/larastan": "^2.9",
+        "nunomaduro/collision": "^6.0 | ^7.0 | ^8.0",
+        "orchestra/testbench": "^7.0 | ^8.0 | ^9.0",
+        "pestphp/pest": "^1.21 | ^2.0",
+        "pestphp/pest-plugin-laravel": "^1.1 | ^2.0",
         "phpstan/extension-installer": "^1.0",
         "phpstan/phpstan-deprecation-rules": "^1.0",
         "phpstan/phpstan-phpunit": "^1.0",
