--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,14 @@
     "require-dev": {
         "larastan/larastan": "^2.9 | ^3.0",
         "nunomaduro/collision": "^6.0 | ^7.0 | ^8.0",
-        "orchestra/testbench": "^7.0 | ^8.0 | ^9.0",
-        "pestphp/pest": "^1.21 | ^2.0",
-        "pestphp/pest-plugin-laravel": "^1.1 | ^2.0",
+        "orchestra/testbench": "^7.0 | ^8.0 | ^9.0 | ^10.0",
+        "pestphp/pest": "^1.21 | ^2.0 | ^3.0",
+        "pestphp/pest-plugin-laravel": "^1.1 | ^2.0 | ^3.0",
         "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpstan/phpstan-strict-rules": "^1.0",
-        "phpunit/phpunit": "^9.5 | ^10.0 | ^11.0 | ^12.0"
+        "phpstan/phpstan-deprecation-rules": "^1.0 | ^2.0",
+        "phpstan/phpstan-phpunit": "^1.0 | ^2.0",
+        "phpstan/phpstan-strict-rules": "^1.0 | ^2.0",
+        "phpunit/phpunit": "^9.5.24 | ^10.5 | ^11.5"
     },
     "autoload": {
         "psr-4": {
