--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,8 +17,8 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest, windows-latest]
-        php: [8.4, 8.3, 8.2, 8.1, 8.0]
-        laravel: [12.*, 11.*, 10.*, 9.*]
+        php: [8.4, 8.3, 8.2, 8.1]
+        laravel: [12.*, 11.*, 10.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 12.*
@@ -27,19 +27,11 @@ jobs:
             testbench: 9.*
           - laravel: 10.*
             testbench: 8.*
-          - laravel: 9.*
-            testbench: 7.*
         exclude:
           - laravel: 12.*
             php: 8.1
-          - laravel: 12.*
-            php: 8.0
           - laravel: 11.*
             php: 8.1
-          - laravel: 11.*
-            php: 8.0
-          - laravel: 10.*
-            php: 8.0
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
@@ -58,11 +50,6 @@ jobs:
         run: |
           echo "::add-matcher::${{ runner.tool_cache }}/php.json"
           echo "::add-matcher::${{ runner.tool_cache }}/phpunit.json"
-
-      - name: Fix dependencies
-        if: ${{ startsWith(matrix.laravel, '9') }}
-        run: |
-          composer require "nesbot/carbon:^2.72.6" --no-interaction --no-update
 
       - name: Install dependencies
         run: |
