--- a/composer.json
+++ b/composer.json
@@ -19,21 +19,21 @@
     "require": {
         "php": "^8.0",
         "doctrine/sql-formatter": "^1.1",
-        "illuminate/contracts": "^9.36.3 | ^10.0 | ^11.0 | ^12.0",
-        "illuminate/view": "^9.36.3 | ^10.0 | ^11.0 | ^12.0",
-        "spatie/laravel-package-tools": "^1.9.2"
+        "illuminate/contracts": "^10.0 | ^11.0 | ^12.0",
+        "illuminate/view": "^10.0 | ^11.0 | ^12.0",
+        "spatie/laravel-package-tools": "^1.16"
     },
     "require-dev": {
+        "laravel/pint": "^1.14",
         "larastan/larastan": "^2.9 | ^3.0",
-        "nunomaduro/collision": "^6.0 | ^7.0 | ^8.0",
-        "orchestra/testbench": "^7.0 | ^8.0 | ^9.0 | ^10.0",
-        "pestphp/pest": "^1.21 | ^2.0 | ^3.0",
-        "pestphp/pest-plugin-laravel": "^1.1 | ^2.0 | ^3.0",
-        "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan-deprecation-rules": "^1.0 | ^2.0",
+        "nunomaduro/collision": "^8.1.1 | ^7.10.0",
+        "orchestra/testbench": "^8.22 | ^9.0 | ^10.0",
+        "pestphp/pest": "^3.0",
+        "pestphp/pest-plugin-laravel": "^3.0",
+        "phpstan/extension-installer": "^1.3 | ^2.0",
+        "phpstan/phpstan-deprecation-rules": "^1.1 | ^2.0",
         "phpstan/phpstan-phpunit": "^1.0 | ^2.0",
-        "phpstan/phpstan-strict-rules": "^1.0 | ^2.0",
-        "phpunit/phpunit": "^9.5.24 | ^10.5 | ^11.5"
+        "phpstan/phpstan-strict-rules": "^1.0 | ^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -48,7 +48,8 @@
     "scripts": {
         "phpstan": "vendor/bin/phpstan analyse",
         "test": "vendor/bin/pest",
-        "test-coverage": "vendor/bin/pest coverage"
+        "test-coverage": "vendor/bin/pest coverage",
+        "format": "vendor/bin/pint"
     },
     "config": {
         "sort-packages": true,
