--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
         "larastan/larastan": "^2.9 | ^3.0",
         "nunomaduro/collision": "^8.1.1 | ^7.10.0",
         "orchestra/testbench": "^8.22 | ^9.0 | ^10.0",
-        "pestphp/pest": "^3.0",
-        "pestphp/pest-plugin-laravel": "^3.0",
+        "pestphp/pest": "^2.0 | ^3.0",
+        "pestphp/pest-plugin-laravel": "^2.0 | ^3.0",
         "phpstan/extension-installer": "^1.3 | ^2.0",
         "phpstan/phpstan-deprecation-rules": "^1.1 | ^2.0",
         "phpstan/phpstan-phpunit": "^1.0 | ^2.0",
